--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #233553;
-  min-height: 100vh;
+/* App.css */
+.app-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  background-color: #f0f2f5; /* Light blue-gray background */
+  font-family: 'Roboto', sans-serif; /* Stylish font */
 }
 
-.App-link {
-  color: #97ca3f;
+.app-header {
+  background-color: #007bff; /* Blue header */
+  color: #fff; /* White text */
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 20px; /* Add margin at the bottom to separate from the components below */
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-header h1 {
+  margin: 0;
+  font-size: 30px; /* Larger font size */
 }
+
+.app-main {
+  flex: 1;
+  display: flex;
+  justify-content: center; /* Horizontally center the contents */
+}
+
+.centered-components {
+  text-align: center; /* Center-align text within the container */
+  margin-top: 28px;
+}
+
+/* Adjust font size for components within centered-components */
+.centered-components input,
+.centered-components ul,
+.centered-components button {
+  font-size: 28px; /* Adjust font size as needed */
+}
+
+.add-button-container {
+  display: flex;
+  justify-content: center; /* Horizontally center the button */
+}
+
+.add-button {
+  width: 40px; /* Set width and height to make it circular */
+  height: 40px;
+  border-radius: 50%; /* Make it circular */
+  background-color: #007bff; /* Blue background color */
+  color: #fff; /* White text color */
+  border: none; /* Remove border */
+  font-size: 20px; /* Increase font size */
+  cursor: pointer; /* Show pointer cursor on hover */
+  outline: none; /* Remove default focus style */
+}
+
+.add-button:hover {
+  background-color: #0056b3; /* Darker blue on hover */
+}
+
